# routes/index.js
@@ -1,8 +1,8 @@
 const routes = require("express").Router();
 
-routes.use("/users", require("./users"));
 routes.use("/courses", require("./courses"));
 routes.use("/lessons", require("./lessons"));
-routes.use("/enrollment", require("./enrollment"));
+routes.use("/enrollments", require("./enrollments"));
+routes.use("/", require("./users"));
 
 module.exports = routes;
